--- a/style.css
+++ b/style.css
@@ -20,6 +20,8 @@ body{
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
+  padding-left: 122px;
+  padding-right: 122px;
 }
 
 ul {
@@ -72,5 +74,7 @@ ul {
   }
 
 @media (max-width: 600px) {
-    
+ .titulo{
+  font-size: 36px;
+ }   
 }
